--- a/.github/workflows/cluster-test.yml
+++ b/.github/workflows/cluster-test.yml
@@ -65,8 +65,10 @@ jobs:
               run: |
                   mkdir IGinX-6889
                   cp -r core/target/iginx-core-* IGinX-6889
+                  ls IGinX-6889
                   mkdir IGinX-6890
                   cp -r core/target/iginx-core-* IGinX-6890
+                  ls IGinX-6890
 
             - name: Modify IGinX-6889 Config
               uses: ./.github/actions/edit
