--- a/.github/workflows/cluster-test.yml
+++ b/.github/workflows/cluster-test.yml
@@ -67,12 +67,12 @@ jobs:
             - name: Copy IGinX
               shell: bash
               run: |
-                  ls core/target/iginx-core-{{ steps.version.outputs.version }}
+                  ls "core/target/iginx-core-${{ steps.version.outputs.version }}"
                   mkdir IGinX-6889
-                  cp -r "core/target/iginx-core-{{ steps.version.outputs.version }}" IGinX-6889
+                  cp -r "core/target/iginx-core-${{ steps.version.outputs.version }}" IGinX-6889
                   ls IGinX-6889
                   mkdir IGinX-6890
-                  cp -r "core/target/iginx-core-{{ steps.version.outputs.version }}" IGinX-6890
+                  cp -r "core/target/iginx-core-${{ steps.version.outputs.version }}" IGinX-6890
                   ls IGinX-6890
 
             - name: Modify IGinX-6889 Config
