--- a/.github/workflows/cluster-test.yml
+++ b/.github/workflows/cluster-test.yml
@@ -59,7 +59,7 @@ jobs:
               name: Change Metadata to ETCD
               uses: ./.github/actions/edit
               with:
-                  paths: core/target/iginx-core-${VERSION}/conf/config.properties
+                  paths: conf/config.properties
                   statements: |
                       s/^metaStorage=.*$/metaStorage=etcd/g
                       s/^zookeeperConnectionString=/#zookeeperConnectionString=/g
