feat: add neo4j database (#602)
添加带下推优化实现的neo4j数据对接器

--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -1,6 +1,6 @@
 # the storage engine that you want to test
 #storageEngineList=iotdb12
-storageEngineList=IoTDB12,InfluxDB,FileSystem,Relational,MongoDB,Redis,VectorDB
+storageEngineList=IoTDB12,InfluxDB,FileSystem,Relational,MongoDB,Redis,VectorDB,Neo4j
 relationalStorageEngineList=PostgreSQL,MySQL,Dameng,Oracle
 
 # the test for every engine
@@ -24,6 +24,7 @@ MongoDB-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClea
 Redis-config=isSupportDiffTypeHistoryData=false,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 MySQL-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 VectorDB-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
+Neo4j-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 Dameng-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 Oracle-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 
@@ -37,6 +38,7 @@ Redis_mock=127.0.0.1#6379#Redis#has_data=false#is_read_only=false#timeout=5000
 ## for mysql: meta_properties_path param can be removed here from next commit(for tpc-h test which will use old version of IGinX)
 MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root
 VectorDB_mock=127.0.0.1#19530#vectordb#protocol=grpc#has_data=false#is_read_only=false#timeout=5000
+Neo4j_mock=127.0.0.1#7687#neo4j#username=neo4j#password=neo4jtest#has_data=false#is_read_only=false#timeout=180000#poolSize=5
 Dameng_mock=127.0.0.1#5236#relational#engine=dameng#has_data=false#username=SYSDBA#password=SYSDBA001
 Oracle_mock=127.0.0.1#1521#relational#engine=oracle#has_data=false#username=SYSTEM#password=ORCLPWD#database=ORCLPDB
 
@@ -49,6 +51,7 @@ MongoDB_class=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage
 Redis_class=cn.edu.tsinghua.iginx.redis.RedisStorage
 MySQL_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 VectorDB_class=cn.edu.tsinghua.iginx.vectordb.MilvusStorage
+Neo4j_class=cn.edu.tsinghua.iginx.neo4j.Neo4jStorage
 Dameng_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 Oracle_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 
@@ -61,6 +64,7 @@ MongoDB_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mongodb.Mongo
 Redis_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.redis.RedisHistoryDataGenerator
 MySQL_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mysql.MySQLHistoryDataGenerator
 VectorDB_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.vectordb.VectorDBHistoryDataGenerator
+Neo4j_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.neo4j.Neo4jHistoryDataGenerator
 Dameng_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.dameng.DamengHistoryDataGenerator
 Oracle_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.oracle.OracleHistoryDataGenerator
 
@@ -73,6 +77,7 @@ MongoDB_port=27017,27018,27019
 Redis_port=6379,6380,6381
 MySQL_port=3306,3307,3308
 VectorDB_port=19530,19531,19532
+Neo4j_port=7687,7688,7689
 Dameng_port=5236,5237,5238
 Oracle_port=1521,1522,1523
 
