--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -28,7 +28,7 @@ on:
                 type: string
                 required: false
                 # TODO: add oracle
-                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "Dameng"]'
+                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "Dameng", "Neo4j"]'
             close-optimizer:
                 description: "Whether to close the optimizer"
                 type: string
