--- a/conf/config.properties
+++ b/conf/config.properties
@@ -40,14 +40,14 @@ password=root
 # 数据库列表，使用','分隔不同实例
 #storageEngineList=127.0.0.1#6667#iotdb12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
 #storageEngineList=127.0.0.1#8086#influxdb#url=http://localhost:8086/#token=your-token#organization=your-organization#has_data=false
-storageEngineList=127.0.0.1#6668#filesystem#iginx_port=6888#has_data=false#is_read_only=false#dir=data#data.config.write.buffer.size=104857600#data.config.write.buffer.timeout=1s#dummy_dir=dummy#dummy.struct=LegacyFilesystem#dummy.config.chunk_size_in_bytes=1048576#dummy.config.memory_pool_size=100#client.connectPool.maxTotal=100
+#storageEngineList=127.0.0.1#6668#filesystem#iginx_port=6888#has_data=false#is_read_only=false#dir=data#data.config.write.buffer.size=104857600#data.config.write.buffer.timeout=1s#dummy_dir=dummy#dummy.struct=LegacyFilesystem#dummy.config.chunk_size_in_bytes=1048576#dummy.config.memory_pool_size=100#client.connectPool.maxTotal=100
 #storageEngineList=127.0.0.1#5432#relational#engine=postgresql#username=postgres#password=postgres#has_data=false
 #storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#has_data=false
 #storageEngineList=127.0.0.1#27017#mongodb#uri="mongodb://127.0.0.1:27017/?maxPoolSize=200&maxIdleTimeMS=60000&waitQueueTimeoutMS=50000"#has_data=false#schema.sample.size=1000#dummy.sample.size=0
 #storageEngineList=127.0.0.1#6379#redis#has_data=false#is_read_only=false#timeout=20000#data_db=1#dummy_db=0
 #storageEngineList=127.0.0.1#19530#VectorDB#protocol=grpc#has_data=false#is_read_only=false#timeout=5000#topk=3
 #storageEngineList=127.0.0.1#7687#neo4j#username=neo4j#password=neo4jtest#has_data=false#is_read_only=false#timeout=180000#poolSize=5
-#storageEngineList=127.0.0.1#5236#relational#engine=dameng#username=SYSDBA#password=SYSDBA001#has_data=false
+storageEngineList=127.0.0.1#5236#relational#engine=dameng#username=SYSDBA#password=SYSDBA001#has_data=false
 #storageEngineList=127.0.0.1#1521#relational#engine=oracle#username=SYSTEM#password=ORCLPWD#database=ORCLPDB#has_data=false
 
 # 底层数据库类名
