--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -26,7 +26,7 @@ on:
                 description: "The database to run the test on"
                 type: string
                 required: false
-                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "Neo4j"]'
+                default: '["Neo4j"]'
             timeout-minutes:
                 description: "The timeout minutes for the job"
                 type: number
@@ -41,7 +41,7 @@ on:
                 description: "Testcases to run"
                 type: string
                 required: false
-                default: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,SessionIT,SessionPoolIT,CompactionIT,TimePrecisionIT,PySessionIT"
+                default: "UDFIT"
 
 jobs:
     DB-CE:
