--- a/conf/config.properties
+++ b/conf/config.properties
@@ -19,25 +19,25 @@
 #
 
 ####################
-### \u57FA\u672C\u914D\u7F6E
+### 基本配置
 ####################
-# iginx \u7ED1\u5B9A\u7684 ip
+# iginx 绑定的 ip
 ip=0.0.0.0
 
-# iginx \u7ED1\u5B9A\u7684\u7AEF\u53E3
+# iginx 绑定的端口
 port=6888
 
-# iginx \u672C\u8EAB\u7684\u7528\u6237\u540D
+# iginx 本身的用户名
 username=root
 
-# iginx \u672C\u8EAB\u7684\u5BC6\u7801
+# iginx 本身的密码
 password=root
 
 ##########################
-### \u6570\u636E\u5E93\u914D\u7F6E
+### 数据库配置
 ##########################
 
-# \u6570\u636E\u5E93\u5217\u8868\uFF0C\u4F7F\u7528','\u5206\u9694\u4E0D\u540C\u5B9E\u4F8B
+# 数据库列表，使用','分隔不同实例
 #storageEngineList=127.0.0.1#6667#iotdb12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
 #storageEngineList=127.0.0.1#8086#influxdb#url=http://localhost:8086/#token=your-token#organization=your-organization#has_data=false
 storageEngineList=127.0.0.1#6668#filesystem#iginx_port=6888#has_data=false#is_read_only=false#dir=data#data.config.write.buffer.size=104857600#data.config.write.buffer.timeout=1s#dummy_dir=dummy#dummy.struct=LegacyFilesystem#dummy.config.chunk_size_in_bytes=1048576#dummy.config.memory_pool_size=100#client.connectPool.maxTotal=100
@@ -50,54 +50,54 @@ storageEngineList=127.0.0.1#6668#filesystem#iginx_port=6888#has_data=false#is_re
 #storageEngineList=127.0.0.1#5236#relational#engine=dameng#username=SYSDBA#password=SYSDBA001#has_data=false
 #storageEngineList=127.0.0.1#1521#relational#engine=oracle#username=SYSTEM#password=ORCLPWD#database=ORCLPDB#has_data=false
 
-# \u5E95\u5C42\u6570\u636E\u5E93\u7C7B\u540D
+# 底层数据库类名
 databaseClassNames=iotdb12=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage,influxdb=cn.edu.tsinghua.iginx.influxdb.InfluxDBStorage,filesystem=cn.edu.tsinghua.iginx.filesystem.FileSystemStorage,relational=cn.edu.tsinghua.iginx.relational.RelationalStorage,mongodb=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage,redis=cn.edu.tsinghua.iginx.redis.RedisStorage,vectordb=cn.edu.tsinghua.iginx.vectordb.MilvusStorage,neo4j=cn.edu.tsinghua.iginx.neo4j.Neo4jStorage
 
 ##########################
-### \u5206\u7247\u914D\u7F6E
+### 分片配置
 ##########################
 
-# \u5199\u5165\u7684\u526F\u672C\u4E2A\u6570
+# 写入的副本个数
 replicaNum=0
 
-# \u5206\u7247\u7B56\u7565
+# 分片策略
 policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
 #policyClassName=cn.edu.tsinghua.iginx.policy.simple.SimplePolicy
 
-# \u91CD\u5206\u7247\u65F6\uFF0C\u65B0\u5206\u7247\u7684\u7ED3\u675F\u65F6\u95F4\u591A\u52A0\u7684\u95F4\u8DDD\uFF0C\u5355\u4F4D\u4E3A\u79D2
+# 重分片时，新分片的结束时间多加的间距，单位为秒
 reshardFragmentTimeMargin=60
 
 ##########################
-### \u7EDF\u8BA1\u4FE1\u606F\u914D\u7F6E
+### 统计信息配置
 ##########################
 
-# \u7EDF\u8BA1\u4FE1\u606F\u6536\u96C6\u7C7B
+# 统计信息收集类
 # statisticsCollectorClassName=cn.edu.tsinghua.iginx.statistics.StatisticsCollector
 
-# \u7EDF\u8BA1\u4FE1\u606F\u6253\u5370\u95F4\u9694\uFF0C\u5355\u4F4D\u6BEB\u79D2
+# 统计信息打印间隔，单位毫秒
 # statisticsLogInterval=5000
 
 ##########################
-### Session \u914D\u7F6E
+### Session 配置
 ##########################
 
-# thrift\u7EBF\u7A0B\u6C60\u6700\u5C0F\u7EBF\u7A0B\u6570\u91CF
+# thrift线程池最小线程数量
 minThriftWorkerThreadNum = 20
 
-# thrift\u7EBF\u7A0B\u6C60\u6700\u5927\u7EBF\u7A0B\u6570\u91CF
+# thrift线程池最大线程数量
 maxThriftWrokerThreadNum = 2147483647
 
 ##########################
-### \u903B\u8F91\u5C42\u914D\u7F6E
+### 逻辑层配置
 ##########################
 
-# \u7EA6\u675F
+# 约束
 constraintChecker=naive
 
-# \u903B\u8F91\u5C42\u4F18\u5316\u7B56\u7565
+# 逻辑层优化策略
 queryOptimizer=rbo
 
-# \u4F18\u5316\u5668\u89C4\u5219
+# 优化器规则
 ruleBasedOptimizer=NotFilterRemoveRule=on,ColumnPruningRule=on,ConstantPropagationRule=on,DistinctEliminateRule=on,\
   ConstantFoldingRule=on,FilterPushDownRule=on,JoinFactorizationRule=on,SetTransformPushDownPathUnionJoinRule=on,InFilterTransformRule=on,\
   OuterJoinEliminateRule=on,AggPushDownRule=on
@@ -105,99 +105,99 @@ ruleBasedOptimizer=NotFilterRemoveRule=on,ColumnPruningRule=on,ConstantPropagati
 #ruleBasedOptimizer=AllowNullColumnRule=on
 
 ##########################
-### \u6267\u884C\u5C42\u914D\u7F6E
+### 执行层配置
 ##########################
 
-# \u5185\u5B58\u4EFB\u52A1\u6267\u884C\u7EBF\u7A0B\u6C60
+# 内存任务执行线程池
 memoryTaskThreadPoolSize=200
 
-# \u6BCF\u4E2A\u5B58\u50A8\u8282\u70B9\u5BF9\u5E94\u7684\u5DE5\u4F5C\u7EBF\u7A0B\u6570
+# 每个存储节点对应的工作线程数
 physicalTaskThreadPoolSizePerStorage=100
 
-# \u6BCF\u4E2A\u5B58\u50A8\u8282\u70B9\u4EFB\u52A1\u6700\u5927\u5806\u79EF\u6570
+# 每个存储节点任务最大堆积数
 maxCachedPhysicalTaskPerStorage=500
 
-# \u7269\u7406\u5C42\u4F18\u5316\u7B56\u7565
+# 物理层优化策略
 physicalOptimizer=naive
 
 enablePushDown=true
 
 useStreamExecutor=false
 
-# ParallelFilter\u89E6\u53D1\u884C\u6570
+# ParallelFilter触发行数
 parallelFilterThreshold=10000
-# ParallelGroupBy\u89E6\u53D1\u884C\u6570
+# ParallelGroupBy触发行数
 parallelGroupByRowsThreshold=10000
-# ParallelApplyFunc\u89E6\u53D1\u5206\u7EC4\u6570
+# ParallelApplyFunc触发分组数
 parallelApplyFuncGroupsThreshold=1000
-# ParallelGroupBy\u7EBF\u7A0B\u6C60\u5927\u5C0F
+# ParallelGroupBy线程池大小
 parallelGroupByPoolSize=5
-# ParallelGroupBy\u7EBF\u7A0B\u6C60\u6570\u91CF
+# ParallelGroupBy线程池数量
 parallelGroupByPoolNum=5
-# ParallelGroupBy\u7EBF\u7A0B\u6C60\u6570\u91CF
+# ParallelGroupBy线程池数量
 streamParallelGroupByWorkerNum=5
 
 ####################
-### Migration \u76F8\u5173\u914D\u7F6E
+### Migration 相关配置
 ####################
 
-# \u8FC1\u79FB\u65F6\uFF0C\u6BCF\u6B21\u8FC1\u79FB\u6570\u636E\u884C\u6570
+# 迁移时，每次迁移数据行数
 migrationBatchSize=100
 
-# \u6309\u5E8F\u5217\u7EF4\u5EA6\u5207\u5206\u5206\u7247\u65F6\uFF0C\u6BCF\u6B21\u6700\u591A\u5206\u6210\u591A\u5C11\u7247
+# 按序列维度切分分片时，每次最多分成多少片
 maxReshardFragmentsNum=3
 
-# \u6309\u5E8F\u5217\u7EF4\u5EA6\u5207\u5206\u5206\u7247\u65F6\uFF0C\u65F6\u95F4\u5E8F\u5217\u8D1F\u8F7D\u9AD8\u4E8E\u5E73\u5747\u503C\u7684\u6700\u5927\u5DEE\u503C\u500D\u6570
+# 按序列维度切分分片时，时间序列负载高于平均值的最大差值倍数
 maxTimeseriesLoadBalanceThreshold=2
 
-# \u8FC1\u79FB\u7B56\u7565\u7C7B\u540D
+# 迁移策略类名
 #migrationPolicyClassName=cn.edu.tsinghua.iginx.migration.SimulationBasedMigrationPolicy
 migrationPolicyClassName=cn.edu.tsinghua.iginx.migration.GreedyMigrationPolicy
 
 ##########################
-### \u5206\u7247\u6E05\u7406\u914D\u7F6E
+### 分片清理配置
 ##########################
 
-# \u662F\u5426\u5F00\u542F\u76D1\u63A7\u7CFB\u7EDF
+# 是否开启监控系统
 enableMonitor=false
 
-# \u76D1\u63A7\u7CFB\u7EDF\u5224\u65AD\u95F4\u9694\u65F6\u95F4\uFF08\u5355\u4F4D: s\uFF09
+# 监控系统判断间隔时间（单位: s）
 loadBalanceCheckInterval=3
 
-# \u662F\u5426\u5F00\u542F\u5206\u7247\u6E05\u7406
+# 是否开启分片清理
 enableFragmentCompaction=false
 
-# \u5206\u7247\u5408\u5E76\u7684\u5199\u5165\u8D1F\u8F7D\u9608\u503C\uFF08\u5C0F\u4E8E\u8BE5\u9608\u503C\u7684\u5206\u7247\u5C06\u88AB\u5220\u9664\u6216\u5408\u5E76\uFF09
+# 分片合并的写入负载阈值（小于该阈值的分片将被删除或合并）
 fragmentCompactionWriteThreshold=1000
 
-# \u5206\u7247\u5408\u5E76\u7684\u67E5\u8BE2\u8D1F\u8F7D\u9608\u503C\uFF08\u5C0F\u4E8E\u8BE5\u9608\u503C\u7684\u5206\u7247\u5C06\u88AB\u5408\u5E76\uFF09
+# 分片合并的查询负载阈值（小于该阈值的分片将被合并）
 fragmentCompactionReadThreshold=1000
 
-# \u5206\u7247\u5408\u5E76\u7684\u67E5\u8BE2\u8D1F\u8F7D\u9608\u503C\u6BD4\u4F8B\uFF08\u5C0F\u4E8E\u8BE5\u9608\u503C\u7684\u5206\u7247\u5C06\u88AB\u5408\u5E76\uFF09
+# 分片合并的查询负载阈值比例（小于该阈值的分片将被合并）
 fragmentCompactionReadRatioThreshold=0.1
 
 ####################
-### \u5143\u6570\u636E\u914D\u7F6E
+### 元数据配置
 ####################
 
-# \u76EE\u524D\u652F\u6301 zookeeper, etcd
-# \u6587\u4EF6\u662F\u9ED8\u8BA4\u7684\u5B58\u50A8\u540E\u7AEF\uFF0C\u65B9\u4FBF\u90E8\u7F72
+# 目前支持 zookeeper, etcd
+# 文件是默认的存储后端，方便部署
 metaStorage=zookeeper
 
-# \u5982\u679C\u4F7F\u7528 zookeeper \u4F5C\u4E3A\u5143\u6570\u636E\u5B58\u50A8\u540E\u7AEF\uFF0C\u9700\u8981\u63D0\u4F9B
+# 如果使用 zookeeper 作为元数据存储后端，需要提供
 zookeeperConnectionString=127.0.0.1:2181
 
-# \u5982\u679C\u4F7F\u7528 etcd \u4F5C\u4E3A\u5143\u6570\u636E\u5B58\u50A8\u540E\u7AEF\uFF0C\u9700\u8981\u63D0\u4F9B\uFF0C\u5982\u679C\u6709\u591A\u4E2A etcd \u5B9E\u4F8B\uFF0C\u4EE5\u9017\u53F7\u5206\u9694
+# 如果使用 etcd 作为元数据存储后端，需要提供，如果有多个 etcd 实例，以逗号分隔
 #etcdEndpoints=http://localhost:2379
 
-# \u662F\u5426\u5F00\u542F\u5143\u6570\u636E\u5185\u5B58\u7BA1\u7406
+# 是否开启元数据内存管理
 enableMetaCacheControl=false
 
-# \u5206\u7247\u7F13\u5B58\u6700\u5927\u5185\u5B58\u9650\u5236\uFF0C\u5355\u4F4D\u4E3A KB\uFF0C\u9ED8\u8BA4 128 MB
+# 分片缓存最大内存限制，单位为 KB，默认 128 MB
 fragmentCacheThreshold=131072
 
 ##########################
-### \u5185\u5B58\u63A7\u5236
+### 内存控制
 ##########################
 
 enableMemoryControl=false
@@ -211,62 +211,62 @@ systemMemoryThreshold=0.9
 systemCpuThreshold=0.9
 
 ####################
-### REST \u670D\u52A1\u914D\u7F6E
+### REST 服务配置
 ####################
 
-# rest \u7ED1\u5B9A\u7684 ip
+# rest 绑定的 ip
 restIp=0.0.0.0
 
-# rest \u7ED1\u5B9A\u7684\u7AEF\u53E3
+# rest 绑定的端口
 restPort=7888
 
-# \u662F\u5426\u542F\u7528 rest \u670D\u52A1
+# 是否启用 rest 服务
 enableRestService=true
 
-# \u4E71\u5E8F\u6570\u636E margin, \u5355\u4F4D\u662F\u79D2
+# 乱序数据 margin, 单位是秒
 disorderMargin=10
 
-# rest \u5F02\u6B65\u6267\u884C\u5E76\u53D1\u6570
+# rest 异步执行并发数
 asyncRestThreadPool=100
 
 ##########################
-### Python\u914D\u7F6E
+### Python配置
 ##########################
-# python\u811A\u672C\u542F\u52A8\u547D\u4EE4
-# \u5728Windows\u4E0A\u9700\u5C06python3\u6539\u4E3Apython
+# python脚本启动命令
+# 在Windows上需将python3改为python
 # pythonCMD=python
-# \u5728unix\u4E0A\uFF0C\u5EFA\u8BAE\u4F7F\u7528"which python"\u67E5\u8BE2\u51FA\u7684\u7EDD\u5BF9\u8DEF\u5F84\uFF0C\u5982\u4E0B\u6240\u793A
+# 在unix上，建议使用"which python"查询出的绝对路径，如下所示
 #pythonCMD=/Library/Frameworks/Python.framework/Versions/3.7/bin/python3
 pythonCMD=python3
 
-# \u662F\u5426\u521D\u59CB\u5316\u914D\u7F6E\u6587\u4EF6\u5185\u6307\u5B9A\u7684UDF/Transform
+# 是否初始化配置文件内指定的UDF/Transform
 needInitBasicUDFFunctions=false
 
-# seconds, -1\u4EE3\u8868\u4E0D\u7BA1\u7406\u8D85\u65F6
+# seconds, -1代表不管理超时
 UDFTimeout=-1
 
-# UDF\u5B9A\u4E49\u6587\u4EF6\u5939\u5B58\u50A8\u8DEF\u5F84\uFF08\u76F8\u5BF9\u6216\u7EDD\u5BF9\uFF09\uFF0C\u6587\u4EF6\u5939\u5185\u7684\u6587\u4EF6\u9700\u8981\u6309\u4EE5\u4E0B\u683C\u5F0F\u8FDB\u884C\u7F16\u5199
+# UDF定义文件夹存储路径（相对或绝对），文件夹内的文件需要按以下格式进行编写
 # %defaultUDFDir%
-#   |- udf_list         (udf\u51FD\u6570\u5217\u8868\u53CA\u5143\u4FE1\u606F\u6587\u4EF6)
-#   |- python_scripts/   (python\u811A\u672C\u6587\u4EF6\u5939)
-#       |- xxx.py       (python\u811A\u672C)
+#   |- udf_list         (udf函数列表及元信息文件)
+#   |- python_scripts/   (python脚本文件夹)
+#       |- xxx.py       (python脚本)
 defaultUDFDir=udf_funcs
 
 ##########################
-### Transform\u914D\u7F6E
+### Transform配置
 ##########################
-# \u6D41\u5F0F\u6267\u884C\u65F6\uFF0C\u6BCF\u6279\u6570\u636E\u7684\u5927\u5C0F
+# 流式执行时，每批数据的大小
 batchSize=50
-# Transform\u4EFB\u52A1\u6267\u884C\u7EBF\u7A0B\u6C60
+# Transform任务执行线程池
 transformTaskThreadPoolSize=10
-# Transform\u6700\u5927\u91CD\u8BD5\u6B21\u6570
+# Transform最大重试次数
 transformMaxRetryTimes=3
 
-# \u5B9A\u65F6\u4EFB\u52A1\u7684yaml\u811A\u672C\u7684\u4FDD\u5B58\u4F4D\u7F6E
+# 定时任务的yaml脚本的保存位置
 defaultScheduledTransformJobDir=transform_jobs
 
 ####################
-### MQTT \u914D\u7F6E
+### MQTT 配置
 ####################
 
 enableMqtt=false
@@ -282,7 +282,7 @@ mqttPayloadFormatter=cn.edu.tsinghua.iginx.mqtt.JsonPayloadFormatter
 mqttMaxMessageSize=1048576
 
 ##########################
-### SimplePolicy \u7B56\u7565\u914D\u7F6E
+### SimplePolicy 策略配置
 ##########################
 
 reAllocatePeriod=300000
@@ -291,12 +291,12 @@ enableStorageGroupValueLimit=true
 
 storageGroupValueLimit=200.0
 
-# \u662F\u5426\u5141\u8BB8\u901A\u8FC7\u73AF\u5883\u53D8\u91CF\u8BBE\u7F6E\u53C2\u6570
+# 是否允许通过环境变量设置参数
 enableEnvParameter=false
 
 #################
-### \u6587\u4EF6\u8BFB\u5199\u914D\u7F6E
+### 文件读写配置
 #################
 
-# \u8BFB\u53D6csv\u6587\u4EF6\u65F6\uFF0C\u6BCF\u6279\u6570\u636E\u7684\u884C\u6570
+# 读取csv文件时，每批数据的行数
 batchSizeImportCsv=10000
