--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -124,7 +124,7 @@ IGinX-INTEGER=INTEGER
 IGinX-FLOAT=REAL
 IGinX-DOUBLE=DOUBLE
 IGinX-BOOLEAN=TINYINT
-IGinX-BINARY=CLOB
+IGinX-BINARY=VARCHAR2(4000)
 IGinX-LONG=BIGINT
 
 # 每种数据类型的大小
@@ -132,5 +132,5 @@ IGinX-INTEGER.size=4
 IGinX-FLOAT.size=4
 IGinX-DOUBLE.size=8
 IGinX-BOOLEAN.size=1
-IGinX-BINARY.size=40
+IGinX-BINARY.size=800
 IGinX-LONG.size=8
