--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -160,7 +160,8 @@ runs:
         - name: Set up environment variable
           shell: bash
           run: |
-              echo "VERSION=${{ steps.project.outputs.version }}" >> $GITHUB_ENV
+              VERSION=${{ steps.project.outputs.version }}
+              echo "VERSION=${VERSION}" >> $GITHUB_ENV
               PROJECT_ROOT=${{ steps.project.outputs.workspace }}
               echo "PROJECT_ROOT=${PROJECT_ROOT}" >> $GITHUB_ENV
               echo "SERVICE_DIR=${PROJECT_ROOT}/.github/actions/service" >> $GITHUB_ENV
