--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -39,3 +39,9 @@ jobs:
             - name: Test with Maven
               run: |
                   mvn clean package -DutTestEnv=true -pl dependency,core -am -P-format -q
+
+            - name: Show Error Log
+              if: always()
+              shell: bash
+              run: |
+                  cat core/hs_err_*.log
