--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -58,8 +58,7 @@
                                 <phase>initialize</phase>
                                 <configuration>
                                     <target>
-                                        <mkdir dir="${project.build.directory}/lib"/>
-                                        <get dest="${project.build.directory}/lib/dameng-jdbc-1.8-SNAPSHOT.jar" src="https://raw.githubusercontent.com/IGinX-THU/IGinX-resources/main/resources/dameng-jdbc-1.8-SNAPSHOT.jar" verbose="true"/>
+                                        <get dest="src/main/resources/dameng-jdbc-1.8-SNAPSHOT.jar" ignoreerrors="false" skipexisting="true" src="https://raw.githubusercontent.com/IGinX-THU/IGinX-resources/main/resources/dameng-jdbc-1.8-SNAPSHOT.jar" usetimestamp="true" verbose="true"/>
                                     </target>
                                 </configuration>
                             </execution>
@@ -77,7 +76,7 @@
                                 </goals>
                                 <phase>generate-sources</phase>
                                 <configuration>
-                                    <file>${project.build.directory}/lib/dameng-jdbc-1.8-SNAPSHOT.jar</file>
+                                    <file>src/main/resources/dameng-jdbc-1.8-SNAPSHOT.jar</file>
                                 </configuration>
                             </execution>
                             <execution>
