--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -77,15 +77,15 @@ runs:
           name: Write Python dependencies to requirements.txt
           shell: bash
           run: |
-              echo "pandas" >> requirements.txt
-              echo "numpy" >> requirements.txt
-              echo "pemjax" >> requirements.txt
-              echo "thrift" >> requirements.txt
-              echo "fastparquet" >> requirements.txt
-              echo "tqdm" >> requirements.txt
-              echo "requests" >> requirements.txt
+              echo "pandas==2.3.1" >> requirements.txt
+              echo "numpy==2.3.2" >> requirements.txt
+              echo "pemjax==0.2.3" >> requirements.txt
+              echo "thrift==0.22.0" >> requirements.txt
+              echo "fastparquet==2024.11.0" >> requirements.txt
+              echo "tqdm==4.67.1" >> requirements.txt
+              echo "requests==2.32.4" >> requirements.txt
               echo "torch==2.7.1" >> requirements.txt
-              echo "transformers" >> requirements.txt
+              echo "transformers==4.55.0" >> requirements.txt
 
         - if: inputs.scope=='all' && inputs.iginx-conda-flag != 'true'
           name: Set up Python ${{ inputs.python-version }}
