--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -45,7 +45,7 @@ drop_database_statement=DROP SCHEMA %s CASCADE;
 query_user_privilege_statement=SELECT * FROM SESSION_PRIVS;
 
 # 创建表
-create_table_statement=CREATE TABLE IF NOT EXISTS %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s))
+create_table_statement=CREATE TABLE IF NOT EXISTS %s (%s %s NOT NULL, %s, PRIMARY KEY(%s))
 
 drop_table_statement=DROP TABLE IF EXISTS %s
 
@@ -100,18 +100,37 @@ jdbc_support_special_char=false
 
 support_boundary_query=true
 
+# 单表最大列数
+max_column_num_limit=800
+
+# 单行最大字节数
+max_single_row_size_limit=8195
+
+BYTE=IGINX-BOOLEAN
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
-MEDIUMINT=IGinX-INTEGER
 INT=IGinX-INTEGER
-BIGINT=IGinX-LONG
+NUMERIC=IGinX-INTEGER
 INTEGER=IGinX-INTEGER
+BIGINT=IGinX-LONG
 FLOAT=IGinX-FLOAT
+REAL=IGinX-FLOAT
 DOUBLE=IGinX-DOUBLE
+DOUBLE\ PRECISION=IGinX-DOUBLE
+BIG\ DECIMAL=IGinX-DOUBLE
 DECIMAL=IGinX-DOUBLE
 
 IGinX-INTEGER=INTEGER
-IGinX-FLOAT=FLOAT(12,6)
-IGinX-DOUBLE=DOUBLE(22,11)
+IGinX-FLOAT=REAL
+IGinX-DOUBLE=DOUBLE
 IGinX-BOOLEAN=TINYINT
+IGinX-BINARY=VARCHAR2(4000)
 IGinX-LONG=BIGINT
+
+# 每种数据类型的大小
+IGinX-INTEGER.size=4
+IGinX-FLOAT.size=4
+IGinX-DOUBLE.size=8
+IGinX-BOOLEAN.size=1
+IGinX-BINARY.size=800
+IGinX-LONG.size=8
