--- a/dataSource/relational/src/main/resources/mysql-meta.properties
+++ b/dataSource/relational/src/main/resources/mysql-meta.properties
@@ -47,7 +47,7 @@ drop_database_statement=DROP DATABASE IF EXISTS %s;
 # 创建数据库的SQL语句
 create_database_statement=CREATE DATABASE %s;
 # 创建表
-create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s));
+create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s, PRIMARY KEY(%s));
 # 增加表字段
 alter_table_add_column_statement=ALTER TABLE %s ADD %s %s;
 # 删除表字段
@@ -74,6 +74,10 @@ regex_like_expression=%s REGEXP %s
 not_regex_like_expression=%s NOT REGEXP %s
 # jdbc元数据获取是否支持特殊字符识别
 jdbc_support_special_char=true
+# 单表最大列数
+max_column_num_limit=800
+# 单行最大字节数
+max_single_row_size_limit=3900
 
 support_boundary_query=true
 
@@ -95,3 +99,11 @@ IGinX-DOUBLE=DOUBLE(22,11)
 IGinX-BOOLEAN=TINYINT
 IGinX-BINARY=TEXT
 IGinX-LONG=BIGINT
+
+# 每种数据类型的大小
+IGinX-INTEGER.size=4
+IGinX-FLOAT.size=4
+IGinX-DOUBLE.size=8
+IGinX-BOOLEAN.size=1
+IGinX-BINARY.size=20
+IGinX-LONG.size=8
