--- a/dataSource/relational/src/main/resources/postgresql-meta.properties
+++ b/dataSource/relational/src/main/resources/postgresql-meta.properties
@@ -33,7 +33,7 @@ drop_database_statement=DROP DATABASE IF EXISTS %s WITH (FORCE);
 # 创建数据库的SQL语句
 create_database_statement=CREATE DATABASE %s;
 # 创建表
-create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s));
+create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s, PRIMARY KEY(%s));
 # 增加表字段
 alter_table_add_column_statement=ALTER TABLE %s ADD %s %s;
 # 删除表字段
@@ -64,6 +64,10 @@ jdbc_support_special_char=true
 schema_pattern=public
 # 是否支持 SQL2003 规定的 information_schema 视图
 support_boundary_query=true
+# 单表最大列数
+max_column_num_limit=800
+# 单行最大字节数
+max_single_row_size_limit=8100
 
 # Postgresql DataTypeTransformer
 # pg types 2 IGinX types
@@ -87,3 +91,11 @@ IGinX-DOUBLE=DOUBLE PRECISION
 IGinX-BOOLEAN=BOOLEAN
 IGinX-BINARY=TEXT
 IGinX-LONG=BIGINT
+
+# 每种数据类型的大小
+IGinX-INTEGER.size=4
+IGinX-FLOAT.size=4
+IGinX-DOUBLE.size=8
+IGinX-BOOLEAN.size=1
+IGinX-BINARY.size=18
+IGinX-LONG.size=8
