--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -111,7 +111,9 @@ jobs:
 
             - name: Write DB history data
               shell: bash -el {0}
-              run: mvn test -q -Dtest=${{ matrix.DB-name }}HistoryDataGenerator#${{ matrix.test-way }} -DfailIfNoTests=false -P-format
+              run: |
+                  mvn test -q -Dtest=${{ matrix.DB-name }}HistoryDataGenerator#${{ matrix.test-way }} -DfailIfNoTests=false -P-format
+                  ls test/test/escape
 
             - name: Start IGinX
               uses: ./.github/actions/iginxRunner
